--- a/iOSCommonUI/LoginView/LoginView.xib
+++ b/iOSCommonUI/LoginView/LoginView.xib
@@ -48,7 +48,7 @@
                             <rect key="frame" x="40" y="0.0" width="237" height="45"/>
                             <nil key="textColor"/>
                             <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                            <textInputTraits key="textInputTraits"/>
+                            <textInputTraits key="textInputTraits" autocorrectionType="no"/>
                         </textField>
                     </subviews>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
